@@ -1,8 +1,13 @@
 pipeline{
+    agent any 
 
-    agent any
+    tools{
+        jdk 'jdk17'
+        maven 'mvn3'
+    }
+    
     environment {
-    MAVEN_OPTS = "--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
+    SCANNER_HOME= tool 'sonarqube-scanner-jenkins'
     } 
 
     stages{
@@ -12,27 +17,29 @@ pipeline{
             git branch: 'main', url: 'https://github.com/MadhumithaRJ/jenkins_java_app.git'
             }
         }
-        stage('Unit Test maven'){
-            steps{
-               script{
-                    sh 'mvn test'
-               }
+        stage(' integration Test') {
+            steps {
+               sh "mvn clean install -DskipTests=true"
             }
         }
-        stage('Integration Test maven'){
-            steps{
-               script{
-                   sh 'mvn verify -DskipUnitTests'
-               }
+
+        stage('Maven Compile') {
+            steps {
+                sh "mvn compile"
             }
+
         }
-        stage('Static code analysis: Sonarqube'){
-            steps{
-               script{
-                   withSonarQubeEnv('sonar-api') {
-                   sh 'mvn clean package sonar:sonar -Dsonar.host.url=http://98.80.245.143:9000'
+        
+        stage('SonarQube-Analysis') {
+            steps {
+                script {
+                 echo "sonarqube code analysis"
+                 withSonarQubeEnv(credentialsId: 'sonar-scanner') {
+                     sh ''' $SCANNER_HOHE/bin/sonar-scanner -Dsonar.projectName=java-pipeline  -Dsonar.projectKey=java-pipeline \
+                     -Dsonar.java.binaries=. '''
+                     echo "End of sonarqube code analysis"
+
                    }
-       
                 }
             }
         }
